welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:11: error: type mismatch;
 found   : Int
 required: String
				sol=i
                                    ^indexOfValue:13: error: type mismatch;
 found   : String
 required: Int
				return sol
                                       ^indexOfValue:20: error: type mismatch;
 found   : String
 required: Int
				return sol
                                       ^